# multicore-talks

./: .gitignore  README.md
examples/: README.md  nbody_task_triangle.ml
ocaml2020-workshop-parallel/: README.md
ocaml2020-workshop-parallel/examples/: .merlin  dune  nbody_domain.ml  nbody_serial.ml  nbody_task.ml  nbody_task_write_optim.ml
ocaml2021-workshop-effects/: .gitignore  Makefile  eio.tex  output.ods  slides.tex
ocaml2023-eio/: .gitignore  Makefile  eio.tex  lock-free.csv  slides.tex
wasm-wg2022-stack-switching/: Dockerfile  eio.tex  slides.fdb_latexmk  slides.tex
